--- a/IUPAC2Formula/IUPAC2Formula.csproj
+++ b/IUPAC2Formula/IUPAC2Formula.csproj
@@ -66,6 +66,7 @@
     <Compile Include="GreekNumberSubchainsCount.cs" />
     <Compile Include="IUPACCompound.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilChainLengths.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GeneralUtils\GeneralUtils.csproj">
