--- a/IUPAC2Formula/IUPAC2Formula.csproj
+++ b/IUPAC2Formula/IUPAC2Formula.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Formula.cs" />
     <Compile Include="GreekNumberChainLength.cs" />
     <Compile Include="GreekNumberSubchainsCount.cs" />
+    <Compile Include="Group.cs" />
     <Compile Include="IUPACCompound.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UtilChainLengths.cs" />
