--- a/GeneralUtils/GeneralUtils.csproj
+++ b/GeneralUtils/GeneralUtils.csproj
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UtilGroupNames.cs" />
     <Compile Include="UtilStrings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
